fix safari scrollbar bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,8 @@ body {
 .scrollbar-hide {
   -ms-overflow-style: none;
   touch-action: none;
+  scrollbar-width: none;
+  overflow: hidden;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
